<?xml version="1.0"?>
<package format="2">
  <name>jp_thormang3_demo</name>
  <version>0.0.1</version>
  <description>
    An expanded GUI program for controlling a THORMANG3.
    Joint module, walking parameter tuning tools, and etc. are added.
  </description>
  <license>Apache 2.0</license>
  <author email="yoshimaru@robotis.com">Yoshimaru Tanaka</author>
  <maintainer email="kitajima@robotis.com">Takashi Kitajima</maintainer>
  <url type="website">http://wiki.ros.org/jp_thormang3_demo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>humanoid_nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>thormang3_feet_ft_module_msgs</depend>
  <depend>thormang3_manipulation_module_msgs</depend>
  <depend>thormang3_walking_module_msgs</depend>
  <depend>thormang3_alarm_module_msgs</depend>
  <depend>thormang3_foot_step_generator</depend>
  <depend>eigen_conversions</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <exec_depend>thormang3_action_script_player</exec_depend>
  <exec_depend>thormang3_navigation</exec_depend>
</package>
